# carrier-pigeon

./: .gitignore  Cargo.toml  LICENSE  plan.md
carrier-pigeon-common/: Cargo.toml
carrier-pigeon-common/src/: lib.rs
carrier-pigeon-fake-messages/: Cargo.toml
carrier-pigeon-fake-messages/src/: lib.rs
carrier-pigeon-matrix/: Cargo.toml
carrier-pigeon-tui/: Cargo.toml
carrier-pigeon-tui/src/: keymap.rs  lib.rs  message_list.rs
pigeon-common/: Cargo.toml
pigeon-common/src/: lib.rs
pigeon-fake-messages/: Cargo.toml
pigeon-fake-messages/src/: lib.rs
pigeon-matrix/: Cargo.toml
pigeon-tui/: Cargo.toml
pigeon-tui/src/: lib.rs
src/: main.rs
