[workspace]
members = [
  "pigeon-common",
  "pigeon-fake-messages",
  "pigeon-matrix",
  "pigeon-tui"
]

[workspace.dependencies]
pigeon-common = { path = "./pigeon-common" }

[package]
name = "carrier-pigeon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
pigeon-common = { workspace = true }
pigeon-fake-messages = { path = "./pigeon-fake-messages" }
pigeon-tui = { path = "./pigeon-tui" }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
