[workspace]
members = [
  "pigeon-common",
  "pigeon-fake-messages",
  "pigeon-matrix",
  "pigeon-tui"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
authors = ["mle <zyxw59@gmail.com>"]
edition = "2021"

[workspace.dependencies]
pigeon-common = { path = "./pigeon-common" }

[package]
name = "carrier-pigeon"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
pigeon-common = { workspace = true }
pigeon-fake-messages = { path = "./pigeon-fake-messages" }
pigeon-tui = { path = "./pigeon-tui" }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
