[package]
name = "carrier-pigeon-fake-messages"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
carrier-pigeon-common = { workspace = true }
chrono = "0.4.38"
lipsum = "0.9.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["sync", "time"] }
uuid = { version = "1.11.0", features = ["v7"] }
