[package]
name = "carrier-pigeon-tui"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
carrier-pigeon-common = { workspace = true }
ratatui = "0.29.0"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["sync"] }
tracing = "0.1.41"
