[package]
name = "pigeon-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
pigeon-common = { workspace = true }
ratatui = "0.29.0"
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["sync"] }
tracing = "0.1.41"
